--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 body{
  background-color:#081b29;
+ color: white;
 
 }
 .header{
@@ -13,7 +14,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    background: solid #0d2538;
+    background: burlywood;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,12 +23,12 @@ body{
 }
 .logo{
     font-size: 25px;
-    color:white;
+    color:black;
     text-decoration: none;
     font-weight: 600;
 }
 .navbar a{
-    color: white;
+    color: black;
     text-decoration: none;
     margin-left: 30px;
     font-size: 18px;
@@ -36,13 +37,16 @@ body{
     }
 .navbar a:hover,
  .navbar a.active{
-    color: #23ecb3;
-    border-bottom: 2px solid #23ecb3;
+    color: aqua;
+    border-bottom: 2px solid aqua;
     padding: 5px 10px;
     border-radius: 5px;
     }
     .home{
        height: 100vh;
+       /* background: url(mypic.jpg) no-repeat;
+        background-size:small 100%;
+        background-position: right; */
        display: flex;
        align-items: center;
        padding: 0 10%;
@@ -59,7 +63,7 @@ body{
     .home-content h3{
       font-size: 32px;
         font-weight: 600;
-        color:aqua;
+        color:burlywood;
     }
     .home-content p{
       font-size: 18px;
@@ -74,7 +78,7 @@ body{
     justify-content: space-between;
 }
 .h-icons a{
-    color: aqua;
+    color: burlywood;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +86,7 @@ body{
     height: 40px;
     border-radius: 50%;
     background: transparent;
-    border: 2px solid aqua;
+    border: 2px solid burlywood;
     font-size: 10px;
     text-decoration: none;
 
@@ -91,9 +95,13 @@ body{
     content: attr(data-icon);
     font-size: 20px;
     margin-right: 5px;
-    color: aqua;
+    color: burlywood;
     transition: all 0.3s ease;
     
+}
+.h-icons a:hover::before{
+    transform: translateY(-5px);
+    color: #23ecb3;
 }
 
 
