--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
     }
 .navbar a:hover,
  .navbar a.active{
-    color: aqua;
+    color:black;
     border-bottom: 2px solid aqua;
     padding: 5px 10px;
     border-radius: 5px;
